Power Calculator 1.0.0 - new design, user interactions are easier and information is clearer - block components wrap all the block. main data has its own version inside them. By updating the component version we send the information to the app - numbers will have comma when reach length of 4 characters - creating a generic component to pc-block generic styles, components and mixins
Bugfixes
- Avoid sending events when field components arent focused.

--- a/example/index.html
+++ b/example/index.html
@@ -10,23 +10,23 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
     </style>
-    <link rel="stylesheet" href="docs/css/c3.min.css">
-    <link rel="stylesheet" href="dist/powercalculator.css">
+    <link rel="stylesheet" href="css/c3.min.css">
+    <link rel="stylesheet" href="../dist/powercalculator.css">
 </head>
 <body>
 
     <div class="power-calculator"></div>
 
-    <script src="docs/js/d3.min.js"></script>
-    <script src="docs/js/c3.min.js"></script>
-    <script src="docs/js/vue.js"></script>
-    <script src="docs/js/almond.js"></script>
-    <script src="dist/powercalculator.js"></script>
+    <script src="js/d3.min.js"></script>
+    <script src="js/c3.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/almond.js"></script>
+    <script src="../dist/powercalculator.js"></script>
     <script>
-        let powercalculator = require('powercalculator');
 
-        // flag to debug
         Vue.config.devtools = true;
+
+        let powercalculator = require('powercalculator');
 
         new Vue(Object.assign({
             el: '.power-calculator',
