--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       new Vue(
         Object.assign(
           {
-            store,
+            store: new Vuex.Store({
+              modules: store,
+            }),
             el: '.power-calculator',
           },
           powerCalculator
